...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        app:hasClickableChildren="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/choose_emotion_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"></androidx.recyclerview.widget.RecyclerView>
    </com.otaliastudios.zoom.ZoomLayout>
...
            android:src="@drawable/next_button_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/forward_button_allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next_button_arrow_allow"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
